--- a/fun.html
+++ b/fun.html
@@ -46,7 +46,7 @@
                     <img src="assets/postcard.png" class="card-img-top" alt="A dashingly handsome developer">
                     <div class="card-body">
                         <h5 class="card-title">Zeke Brustkern</h5>
-                        <p class="card-text">My name is Zeke Brustkern. I'm a full stack developer. Here are some projects showcasing a variety of technologies. Lately I've been testing my deployment chops on Google Cloud, Netlify, Vercel, and Heroku.</p>
+                        <p class="card-text">My name is Zeke Brustkern. I like building things- quantitative finance models, enterprise software, and consumer facing applications. Here are some personal projects with a variety of technologies.</p>
                         <a href="https://github.com/zbrustkern" class="btn btn-primary stretched-link">GitHub</a>
                     </div>
                 </div>
